# magika_demo

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  TEST_SUMMARY.md  compose.yaml  pyproject.toml  requirement.txt  requirements.txt  ruff.toml
.github/: dependabot.yml  labeler.yml
.github/workflows/: greetings.yml  labeler.yml
example/: api.py  settings.py  urls.py
tests/: README.md  __init__.py  test_api.py  test_magika_integration.py  test_sanity.py
