[project]
name = "example"
version = "0.1.0"
description = "Magika Example Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0 ; python_full_version >= '3.8'",
    "asgiref==3.9.1 ; python_full_version >= '3.8'",
    "asgiref==3.9.1 ; python_full_version >= '3.9'",
    "click==8.2.1 ; python_full_version >= '3.10'",
    "colorama==0.4.6 ; python_full_version >= '2.7'",
    "coloredlogs==15.0.1 ; python_full_version >= '2.7'",
    "django==5.2.4 ; python_full_version >= '3.10'",
    "django-ninja==1.4.3 ; python_full_version >= '3.7'",
    "flatbuffers==25.2.10",
    "granian==2.4.1 ; python_full_version >= '3.9'",
    "humanfriendly==10.0 ; python_full_version >= '2.7'",
    "magika==0.6.2 ; python_full_version >= '3.8'",
    "mpmath==1.3.0",
    "numpy==2.3.1 ; python_full_version >= '3.11'",
    "onnxruntime==1.22.1 ; python_full_version >= '3.10'",
    "packaging==25.0 ; python_full_version >= '3.8'",
    "protobuf==6.31.1 ; python_full_version >= '3.9'",
    "pydantic==2.11.7 ; python_full_version >= '3.9'",
    "pydantic-core==2.33.2 ; python_full_version >= '3.9'",
    "pyreadline3==3.5.4 ; python_full_version >= '3.8'",
    "python-dotenv==1.1.1 ; python_full_version >= '3.9'",
    "sqlparse==0.5.3 ; python_full_version >= '3.8'",
    "sympy==1.14.0 ; python_full_version >= '3.9'",
    "tabulate==0.9.0 ; python_full_version >= '3.7'",
    "tqdm==4.67.1 ; python_full_version >= '3.7'",
    "typing-extensions==4.14.1 ; python_full_version >= '3.9'",
    "typing-inspection==0.4.1 ; python_full_version >= '3.9'",
    "tzdata==2025.2 ; python_full_version >= '2'",
]
