[project]
name = "example"
version = "0.1.0"
description = "Magika Example Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "asgiref==3.9.1",
    "click==8.2.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "django==5.2.6",
    "django-ninja==1.4.3",
    "flatbuffers==25.2.10",
    "granian==2.5.2",
    "humanfriendly==10.0",
    "magika==0.6.2",
    "mpmath==1.3.0",
    "numpy==2.3.2",
    "onnxruntime==1.22.1",
    "packaging==25.0",
    "protobuf==6.32.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyreadline3==3.5.4",
    "python-dotenv==1.1.1",
    "sqlparse==0.5.3",
    "sympy==1.14.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
]

[tool.uv]
link-mode = "copy"
upgrade = true