[project]
name = "example"
version = "1.4.2"
description = "Magika Example Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "annotated-types",
   "asgiref",
   "click",
   "colorama",
   "coloredlogs",
   "django",
   "django-ninja",
   "flatbuffers",
   "granian",
   "humanfriendly",
   "magika",
   "mpmath",
   "numpy",
   "onnxruntime",
   "packaging",
   "protobuf",
   "pydantic",
   "pydantic-core",
   "pyreadline3",
   "python-dotenv",
   "sqlparse",
   "sympy",
   "typing-extensions",
   "typing-inspection",
   "tzdata",
]

[tool.uv]
link-mode = "copy"
upgrade = true
